2007-03-30 Raphael Neider <rneider AT web.de>

	* src/pic/ralloc.c (isData): suppress garbage debug output

2007-03-28 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx:
	  "Nightly Snapshots" replaced with "Snapshot Builds", since the SDCC
	  is developed, built and used worldwide, and the word "night" doesn't
	  make any sense.

2007-03-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/C8051F360.h: new, added
	* device/include/mcs51/C8051F520.h: fixed buggy sbit addresses SPI0CN

2007-03-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCC.y (declaration_specifiers, function_specifier),
	* support/Util/SDCCerr.c,
	* support/Util/SDCCerr.h,
	* src/SDCCsymt.h,
	* src/SDCCsymt.c (mergeSpec, checkFunction): Parse and validate the
	  inline keyword
	* src/SDCCmem.c (deallocParms),
	* src/SDCCast.c: support for function inlining, not quite complete
	* src/SDCCsymt.c (printTypeChain, printTypeChainRaw): display
	  'restrict' qualifier

2007-03-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (saveRegisters, unsaveRegisters): free some bitVects,
	  (saveRBank, unsaveRBank): don't save bits,
	  (genFunction, genEndFunction): save bits exactly once, fix bug 1535242
	* support/regression/tests/bug1535242.c: new, added
	* device/include/assert.h: applied patch 1686533 to fix bug 1686528,
	  thanks Alexey Shamrin <shamrin AT gmail.com>,
	  made assert.h header ANSI compliant (added a check for NDEBUG macro,
	  removed header guard)
	* .version,
	* sdcc.spec: bumped version to 2.6.5
	* src/SDCCmain.c(parseCmdLine): fixed bug 1677144

2007-03-22 Borut Razem <borut.razem AT siol.net>

	* debugger/mcs51/cmd.c, debugger/mcs51/sdcdb.c:
	  fixed bug #1653671: sdcdb integration into ddd is broken

2007-03-22 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (popGetExternal): augmented to also create references
	  to external variables (not only labels),
	  (genCall): comment on plan to reduce PAGESEL overhead,